<resources>
    <string name="app_name">LearningBasics</string>
    <string name="contact_name">Hello Moto</string>
    <string name="contact_phn">9000000006</string>
    <string name="Next_btn">Next</string>
    <string name="prev_btn">PREV</string>
    <string name="image1">A Bird</string>
    <string name="image2">A Droplet</string>
    <string name="image3">A Cow</string>
    <string name="image4">A Fox</string>
    <string name="textview">Welcome to Gallery</string>
    <string name="names_heading">NAMES</string>
    <string name="phns_heading">CONTACT NO.</string>
    <string name="edit_name">Enter Student Name</string>
    <string name="edit_id">Enter Student Id</string>
    <string name="edit_dob">Enter Student DOB (DD/MM/YY)</string>
    <string name="view_btn">VIEW</string>
    <string name="add_btn">ADD</string>
    <string name="action_heading">what do you want to perform:</string>
    <string name="action_delete">Delete Student Record</string>
    <string name="action_add">Update Student Record</string>
    <string name="add_hint">Enter Student ID</string>
    <string name="action_btn_in_list">Actions</string>


    <string name="text1">Nanda</string>
    <string name="text2">Luffy</string>
    <string name="text3">Miles</string>
    <string name="text4">HERE</string>

    <string name="temp">Temp Text</string>
    <string name="animeTitle">Anime Name</string>
    <string name="animeMainChara">Anime Main Character</string>
</resources>