<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

        <LinearLayout
            android:id="@+id/input_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/stu_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="20sp"
                android:hint="@string/edit_id"
                android:autofillHints="" />

            <EditText
                android:id="@+id/stu_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:layout_weight="1"
                android:textSize="20sp"
                android:hint="@string/edit_name"
                android:autofillHints="" />

            <EditText
                android:id="@+id/stu_dob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:layout_weight="1"
                android:textSize="20sp"
                android:hint="@string/edit_dob"
                android:autofillHints="" />
        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_details"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="54dp"
        android:text="@string/add_btn"
        android:layout_alignBaseline="@id/view_btn"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_details"
        android:layout_alignEnd="@+id/input_details"
        android:text="@string/view_btn"
        android:layout_marginStart="54dp"
        android:layout_marginTop="35dp"
         />

</RelativeLayout>