<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dragndrop.MainActivity"

    >

    <!--<TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_2"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        />-->
    <ImageView
        android:id="@+id/dragImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sa_8_a"
        app:layout_constraintBottom_toTopOf="@id/txt_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/red_btn"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/text1" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragImage"
        app:layout_constraintBottom_toTopOf="@id/txt_3"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/txt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_2"
        app:layout_constraintBottom_toTopOf="@id/dropImage1_a"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        />
    <ImageView
        android:id="@+id/dropImage1_a"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:src="@drawable/sa_8_a"
        app:layout_constraintEnd_toStartOf="@id/dropImage2_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/purple_200"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/text1"
        app:layout_constraintDimensionRatio="1:1"
        />
    <ImageView
        android:id="@+id/dropImage1_b"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:src="@drawable/sa_8_b"
        app:layout_constraintEnd_toStartOf="@id/dropImage2_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/purple_200"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/text1"
        app:layout_constraintDimensionRatio="1:1"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/dropImage1_c"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:src="@drawable/sa_8_c"
        app:layout_constraintEnd_toStartOf="@id/dropImage2_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/text1"
        app:layout_constraintDimensionRatio="1:1"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/dropImage2_a"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:src="@drawable/sa_8_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dropImage1_a"
        app:layout_constraintTop_toBottomOf="@id/txt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/green_btn"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/text1"
        app:layout_constraintDimensionRatio="1:1"
        />
    <ImageView
        android:id="@+id/dropImage2_b"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:src="@drawable/sa_8_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dropImage1_a"
        app:layout_constraintTop_toBottomOf="@id/txt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/green_btn"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/text1"
        app:layout_constraintDimensionRatio="1:1"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/dropImage2_c"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:src="@drawable/sa_8_c"
       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dropImage1_a"
        app:layout_constraintTop_toBottomOf="@id/txt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/text1"
        app:layout_constraintDimensionRatio="1:1"
        android:visibility="invisible"
        />


    <!--<TextView
        android:id="@+id/txt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/red_btn"
        />-->



</androidx.constraintlayout.widget.ConstraintLayout>